target/classes/compiladoresParser.py
# Generated from src/main/antlr4/compiladores.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class compiladoresParser ( Parser ):

    grammarFileName = "compiladores.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'bool'", "'float'", "'double'", 
                     "'void'", "'while'", "'for'", "'if'", "'else'", "'return'", 
                     "'TRUE'", "'FALSE'", "'('", "')'", "';'", "'{'", "'}'", 
                     "','", "'.'", "'='", "'=='", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'>'", "'<'", "'>='", "'<='", "'||'", "'&&'" ]

    symbolicNames = [ "<INVALID>", "INT", "BOOL", "FLOAT", "DOUBLE", "VOID", 
                      "WHILE", "FOR", "IF", "ELSE", "RETURN", "TRUE", "FALSE", 
                      "PA", "PC", "PYC", "LLA", "LLC", "COMA", "PUNTO", 
                      "ASIG", "IGUAL", "SUMA", "RESTA", "MULT", "DIV", "MOD", 
                      "MAY", "MEN", "MAYI", "MENI", "OR", "AND", "ID", "NUMERO", 
                      "DECIMAL", "WS", "COMENTARIO" ]

    RULE_programa = 0
    RULE_instrucciones = 1
    RULE_instruccion = 2
    RULE_declaracionGlobal = 3
    RULE_restoDeclaracion = 4
    RULE_listaVars = 5
    RULE_asignacionInit = 6
    RULE_funcionVoid = 7
    RULE_tipoDatos = 8
    RULE_argumento = 9
    RULE_argumentos = 10
    RULE_bloque = 11
    RULE_declaracion = 12
    RULE_declaracionPYC = 13
    RULE_inic = 14
    RULE_asignacionNum = 15
    RULE_asignacionBool = 16
    RULE_asignacion = 17
    RULE_asignacionPYC = 18
    RULE_iwhile = 19
    RULE_ifor = 20
    RULE_init = 21
    RULE_iter = 22
    RULE_iteracion = 23
    RULE_iif = 24
    RULE_returnfun = 25
    RULE_ids = 26
    RULE_funcionVar = 27
    RULE_llamadafun = 28
    RULE_exp = 29
    RULE_expPrima = 30
    RULE_term = 31
    RULE_t = 32
    RULE_factor = 33
    RULE_opcomp = 34
    RULE_opbool = 35
    RULE_cond = 36

    ruleNames =  [ "programa", "instrucciones", "instruccion", "declaracionGlobal", 
                   "restoDeclaracion", "listaVars", "asignacionInit", "funcionVoid", 
                   "tipoDatos", "argumento", "argumentos", "bloque", "declaracion", 
                   "declaracionPYC", "inic", "asignacionNum", "asignacionBool", 
                   "asignacion", "asignacionPYC", "iwhile", "ifor", "init", 
                   "iter", "iteracion", "iif", "returnfun", "ids", "funcionVar", 
                   "llamadafun", "exp", "expPrima", "term", "t", "factor", 
                   "opcomp", "opbool", "cond" ]

    EOF = Token.EOF
    INT=1
    BOOL=2
    FLOAT=3
    DOUBLE=4
    VOID=5
    WHILE=6
    FOR=7
    IF=8
    ELSE=9
    RETURN=10
    TRUE=11
    FALSE=12
    PA=13
    PC=14
    PYC=15
    LLA=16
    LLC=17
    COMA=18
    PUNTO=19
    ASIG=20
    IGUAL=21
    SUMA=22
    RESTA=23
    MULT=24
    DIV=25
    MOD=26
    MAY=27
    MEN=28
    MAYI=29
    MENI=30
    OR=31
    AND=32
    ID=33
    NUMERO=34
    DECIMAL=35
    WS=36
    COMENTARIO=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def EOF(self):
            return self.getToken(compiladoresParser.EOF, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = compiladoresParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.instrucciones()
            self.state = 75
            self.match(compiladoresParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.InstruccionContext,i)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = compiladoresParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8590001662) != 0):
                self.state = 77
                self.instruccion()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionGlobal(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionGlobalContext,0)


        def funcionVoid(self):
            return self.getTypedRuleContext(compiladoresParser.FuncionVoidContext,0)


        def iwhile(self):
            return self.getTypedRuleContext(compiladoresParser.IwhileContext,0)


        def ifor(self):
            return self.getTypedRuleContext(compiladoresParser.IforContext,0)


        def iif(self):
            return self.getTypedRuleContext(compiladoresParser.IifContext,0)


        def asignacionPYC(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionPYCContext,0)


        def returnfun(self):
            return self.getTypedRuleContext(compiladoresParser.ReturnfunContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def llamadafun(self):
            return self.getTypedRuleContext(compiladoresParser.LlamadafunContext,0)


        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = compiladoresParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.declaracionGlobal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.funcionVoid()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.iwhile()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.ifor()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.iif()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.asignacionPYC()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.returnfun()
                self.state = 90
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 92
                self.llamadafun()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 93
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionGlobalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipoDatos(self):
            return self.getTypedRuleContext(compiladoresParser.TipoDatosContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def restoDeclaracion(self):
            return self.getTypedRuleContext(compiladoresParser.RestoDeclaracionContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracionGlobal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionGlobal" ):
                listener.enterDeclaracionGlobal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionGlobal" ):
                listener.exitDeclaracionGlobal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionGlobal" ):
                return visitor.visitDeclaracionGlobal(self)
            else:
                return visitor.visitChildren(self)




    def declaracionGlobal(self):

        localctx = compiladoresParser.DeclaracionGlobalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracionGlobal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.tipoDatos()
            self.state = 97
            self.match(compiladoresParser.ID)
            self.state = 98
            self.restoDeclaracion()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestoDeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def argumentos(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentosContext,0)


        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def listaVars(self):
            return self.getTypedRuleContext(compiladoresParser.ListaVarsContext,0)


        def asignacionInit(self):
            return self.getTypedRuleContext(compiladoresParser.AsignacionInitContext,0)


        def getRuleIndex(self):
            return compiladoresParser.RULE_restoDeclaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestoDeclaracion" ):
                listener.enterRestoDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestoDeclaracion" ):
                listener.exitRestoDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestoDeclaracion" ):
                return visitor.visitRestoDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def restoDeclaracion(self):

        localctx = compiladoresParser.RestoDeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_restoDeclaracion)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(compiladoresParser.PA)
                self.state = 101
                self.argumentos()
                self.state = 102
                self.match(compiladoresParser.PC)
                self.state = 103
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(compiladoresParser.PA)
                self.state = 106
                self.argumentos()
                self.state = 107
                self.match(compiladoresParser.PC)
                self.state = 108
                self.match(compiladoresParser.PYC)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.listaVars()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.asignacionInit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaVarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.COMA)
            else:
                return self.getToken(compiladoresParser.COMA, i)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.ID)
            else:
                return self.getToken(compiladoresParser.ID, i)

        def getRuleIndex(self):
            return compiladoresParser.RULE_listaVars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaVars" ):
                listener.enterListaVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaVars" ):
                listener.exitListaVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListaVars" ):
                return visitor.visitListaVars(self)
            else:
                return visitor.visitChildren(self)




    def listaVars(self):

        localctx = compiladoresParser.ListaVarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listaVars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 114
                self.match(compiladoresParser.COMA)
                self.state = 115
                self.match(compiladoresParser.ID)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(compiladoresParser.PYC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionInitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASIG(self):
            return self.getToken(compiladoresParser.ASIG, 0)

        def exp(self):
            return self.getTypedRuleContext(compiladoresParser.ExpContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_asignacionInit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacionInit" ):
                listener.enterAsignacionInit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacionInit" ):
                listener.exitAsignacionInit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacionInit" ):
                return visitor.visitAsignacionInit(self)
            else:
                return visitor.visitChildren(self)




    def asignacionInit(self):

        localctx = compiladoresParser.AsignacionInitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_asignacionInit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(compiladoresParser.ASIG)
            self.state = 124
            self.exp()
            self.state = 125
            self.match(compiladoresParser.PYC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionVoidContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(compiladoresParser.VOID, 0)

        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def PA(self):
            return self.getToken(compiladoresParser.PA, 0)

        def argumentos(self):
            return self.getTypedRuleContext(compiladoresParser.ArgumentosContext,0)


        def PC(self):
            return self.getToken(compiladoresParser.PC, 0)

        def bloque(self):
            return self.getTypedRuleContext(compiladoresParser.BloqueContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_funcionVoid

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncionVoid" ):
                listener.enterFuncionVoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncionVoid" ):
                listener.exitFuncionVoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncionVoid" ):
                return visitor.visitFuncionVoid(self)
            else:
                return visitor.visitChildren(self)




    def funcionVoid(self):

        localctx = compiladoresParser.FuncionVoidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_funcionVoid)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(compiladoresParser.VOID)
                self.state = 128
                self.match(compiladoresParser.ID)
                self.state = 129
                self.match(compiladoresParser.PA)
                self.state = 130
                self.argumentos()
                self.state = 131
                self.match(compiladoresParser.PC)
                self.state = 132
                self.bloque()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(compiladoresParser.VOID)
                self.state = 135
                self.match(compiladoresParser.ID)
                self.state = 136
                self.match(compiladoresParser.PA)
                self.state = 137
                self.argumentos()
                self.state = 138
                self.match(compiladoresParser.PC)
                self.state = 139
                self.match(compiladoresParser.PYC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoDatosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(compiladoresParser.BOOL, 0)

        def INT(self):
            return self.getToken(compiladoresParser.INT, 0)

        def FLOAT(self):
            return self.getToken(compiladoresParser.FLOAT, 0)

        def DOUBLE(self):
            return self.getToken(compiladoresParser.DOUBLE, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_tipoDatos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoDatos" ):
                listener.enterTipoDatos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoDatos" ):
                listener.exitTipoDatos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoDatos" ):
                return visitor.visitTipoDatos(self)
            else:
                return visitor.visitChildren(self)




    def tipoDatos(self):

        localctx = compiladoresParser.TipoDatosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tipoDatos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipoDatos(self):
            return self.getTypedRuleContext(compiladoresParser.TipoDatosContext,0)


        def ID(self):
            return self.getToken(compiladoresParser.ID, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_argumento

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumento" ):
                listener.enterArgumento(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumento" ):
                listener.exitArgumento(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumento" ):
                return visitor.visitArgumento(self)
            else:
                return visitor.visitChildren(self)




    def argumento(self):

        localctx = compiladoresParser.ArgumentoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_argumento)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.tipoDatos()
            self.state = 146
            self.match(compiladoresParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argumento(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(compiladoresParser.ArgumentoContext)
            else:
                return self.getTypedRuleContext(compiladoresParser.ArgumentoContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.COMA)
            else:
                return self.getToken(compiladoresParser.COMA, i)

        def getRuleIndex(self):
            return compiladoresParser.RULE_argumentos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgumentos" ):
                listener.enterArgumentos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgumentos" ):
                listener.exitArgumentos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgumentos" ):
                return visitor.visitArgumentos(self)
            else:
                return visitor.visitChildren(self)




    def argumentos(self):

        localctx = compiladoresParser.ArgumentosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_argumentos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 148
                self.argumento()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==18:
                    self.state = 149
                    self.match(compiladoresParser.COMA)
                    self.state = 150
                    self.argumento()
                    self.state = 155
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLA(self):
            return self.getToken(compiladoresParser.LLA, 0)

        def instrucciones(self):
            return self.getTypedRuleContext(compiladoresParser.InstruccionesContext,0)


        def LLC(self):
            return self.getToken(compiladoresParser.LLC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = compiladoresParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(compiladoresParser.LLA)
            self.state = 159
            self.instrucciones()
            self.state = 160
            self.match(compiladoresParser.LLC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipoDatos(self):
            return self.getTypedRuleContext(compiladoresParser.TipoDatosContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.ID)
            else:
                return self.getToken(compiladoresParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(compiladoresParser.COMA)
            else:
                return self.getToken(compiladoresParser.COMA, i)

        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracion" ):
                listener.enterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracion" ):
                listener.exitDeclaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = compiladoresParser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.tipoDatos()
            self.state = 163
            self.match(compiladoresParser.ID)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 164
                self.match(compiladoresParser.COMA)
                self.state = 165
                self.match(compiladoresParser.ID)
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionPYCContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(compiladoresParser.DeclaracionContext,0)


        def PYC(self):
            return self.getToken(compiladoresParser.PYC, 0)

        def getRuleIndex(self):
            return compiladoresParser.RULE_declaracionPYC
